2003-08-03  Marco Gerards  <metgerards@student.han.nl>

	* fatfs.h (struct disknode): New member DIRNODE.
	* inode.c (read_node): Added assertion to be sure the directory
	can always be found.  Add directory dependancy to node by
	initializing DIRNODE and holding a reference.
	(diskfs_node_norefs): Release reference to DIRNODE.
	(write_node): Don't use diskfs_cached_lookup to lookup the
	directory, use DIRNODE instead and lock DP.  Don't use diskfs_nput,
	use mutex_unlock instead.
	(diskfs_alloc_node): Add directory dependancy to node by
	initializing DIRNODE and holding a reference.

2003-08-05  Marcus Brinkmann  <marcus@gnu.org>

	* fat.c (fat_read_sblock): Catch error from store_read.

2003-08-03  Marco Gerards  <metgerards@student.han.nl>

	* inode.c (read_node): Fix typo.

2003-08-01  Marco Gerards  <metgerards@student.han.nl>

	* node-create.c: New file.
	* Makefile (SRCS): Added node-created.c.
	* dir.c: Include <hurd/fsys.h>.
	(diskfs_direnter_hard): Initialize a new block with zeros. Enter
	direntry and setup the virtual	inode. Also handle directories
	correctly.
	(diskfs_rewrite_hard): Function rewritten.
	(diskfs_dirempty): Change logic to test if a file was deleted.
	* fat.c (fat_extend_chain): Unlock spin_lock when returning from
	function. Set dn->last to 0 when deallocating the complete
	file. Update dn->last when not deallocating the complete file. Set
	dn->first to zero when the complete file was deallocated. Also
	update dn->length_of_chain to the new amount of clusters in the
	chain.
	* main.c (diskfs_hard_readonly): Remove global variable.

2003-07-29  Jeff Bailey  <jbailey@nisa.net>

	* fatfs.h (LOG2_BLOCKS_PER_CLUSTER): Fix typo.

2003-07-17  Marcus Brinkmann  <marcus@gnu.org>

	* pager.c (find_cluster): Round to cluster size rather than adding
	cluster size.

2003-07-14  Marco Gerards  <metgerards@student.han.nl>

	* fat.c (fat_read_sblock): Don't test if the root dir size is a
	multiple of sectors_per_cluster.  Reported by Barry deFreese