@@ -1,3 +1,11 @@
+2003-08-09  Marcus Brinkmann  <marcus@gnu.org>
+
+	* fat.h (read_dword) [BYTE_ORDER == BIG_ENDIAN]: Use bswap_32 to
+	swap bytes.
+	(write_dword) [BYTE_ORDER == BIG_ENDIAN]: Likewise.
+	(read_word) [BYTE_ORDER == BIG_ENDIAN]: Use bswap_16 to swap bytes.
+	(write_word) [BYTE_ORDER == BIG_ENDIAN]: Likewise.
+
 2003-08-03  Marco Gerards  <metgerards@student.han.nl>
 
 	* fatfs.h (struct disknode): New member DIRNODE.
